--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         applicationId "co.kr.itforone.namoint"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 1
+        versionCode 2
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -26,7 +26,7 @@ android {
 }
 
 dependencies {
-    provided 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
+    compileOnly 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
     implementation('com.google.firebase:firebase-core:16.0.1') {
         exclude group: "com.android.support", module: "support-v4"
         exclude group: "com.android.support", module: "support-media-compat"
@@ -35,6 +35,7 @@ dependencies {
         exclude group: "com.android.support", module: "support-v4"
         exclude group: "com.android.support", module: "support-media-compat"
     }
+    implementation 'com.google.android.gms:play-services-auth:17.0.0'
     implementation 'com.jakewharton:butterknife:10.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
